alignment issues

--- a/src/styles/ClientSetup.module.scss
+++ b/src/styles/ClientSetup.module.scss
@@ -17,24 +17,27 @@ div.type {
 }
 
 div.checkbox {
-  position: fixed;
+  position: relative;
   color: whitesmoke;
-  margin-left: -16rem;
-  margin-top: 197px;
+  margin-left: 2px;
+  margin-top: -90px;
+  float: left;
 }
 
 label.space {
   position: relative;
   font-size: large;
-  margin-right: 2vh;
-  margin-top: 9vh;
+  margin-right: 3vh;
+  top: -39px;
+  bottom: 0;
   font-weight: 700;
 }
 
 input.space {
   position: relative;
-  margin-right: 2vh;
+  margin-right: 3vh;
   font-weight: 700;
+  top: -39px;
 }
 
 div.find {
@@ -85,11 +88,11 @@ select.typeInput {
 p.Archived {
   font-size: large;
   color: white;
-
-  margin-left: -25.5rem;
+  right: 11vh;
   margin-top: 20vh;
   position: relative;
   font-weight: 700;
+  float: left;
 }
 
 div.calender {
